--- a/login.html
+++ b/login.html
@@ -101,7 +101,7 @@
 <div class="max-w-[480px] w-full mx-auto">
 <h1 class="text-text-main text-4xl lg:text-5xl font-bold leading-tight mb-2 tracking-tight">Welcome back.</h1>
 <p class="text-text-muted text-lg mb-8">Enter your credentials to access the nexus dashboard.</p>
-<form class="flex flex-col gap-6">
+<form class="flex flex-col gap-6" action="Dashboard/dashboard-final.html" method="get">
 <div class="flex flex-col gap-2">
 <label class="text-text-main text-sm font-medium ml-1" for="email">Email Address</label>
 <div class="relative group">
@@ -126,7 +126,7 @@
 </button>
 </div>
 </div>
-<button class="mt-4 w-full bg-primary hover:bg-primary-hover text-white font-bold text-lg h-14 rounded-lg shadow-subtle hover:shadow-lg transition-all duration-300 transform active:scale-[0.99]" type="button">
+<button class="mt-4 w-full bg-primary hover:bg-primary-hover text-white font-bold text-lg h-14 rounded-lg shadow-subtle hover:shadow-lg transition-all duration-300 transform active:scale-[0.99]" type="submit">
                         Sign In
                     </button>
 </form>
