--- a/Dashboard/dashboard-final.html
+++ b/Dashboard/dashboard-final.html
@@ -162,7 +162,7 @@
 </aside>
 <main id="mainContent" class="ml-64 flex-1 flex flex-col min-w-0">
 <header class="h-20 bg-white/80 dark:bg-slate-900/80 backdrop-blur-md border-b border-slate-200 dark:border-slate-800 flex items-center justify-between px-8 sticky top-0 z-10">
-<div class="flex-1 max-w-2xl relative">
+<div class="flex-1 max-w-xl relative">
 <span class="material-symbols-outlined absolute left-4 top-1/2 -translate-y-1/2 text-indigo-500">auto_awesome</span>
 <input class="w-full pl-12 pr-16 py-3 bg-slate-50 dark:bg-slate-800 border-slate-200 dark:border-slate-700 rounded-2xl focus:ring-2 focus:ring-primary/20 focus:border-primary transition-all text-sm" placeholder="Type to search or ask Yua AI..." type="text"/>
 <div class="absolute right-4 top-1/2 -translate-y-1/2 flex items-center gap-1 bg-white dark:bg-slate-700 border border-slate-200 dark:border-slate-600 px-1.5 py-0.5 rounded text-[10px] text-slate-400 font-mono">
