--- a/landing_page.html
+++ b/landing_page.html
@@ -154,7 +154,7 @@
 <span class="material-symbols-outlined text-[20px] hidden dark:inline-block">dark_mode</span> 
 <span class="material-symbols-outlined text-[20px] inline-block dark:hidden">light_mode</span> 
 </button>
-<button class="text-slate-600 font-semibold text-sm hover:text-blue-600 dark:text-slate-300 dark:hover:text-white h-[36px] px-3 flex items-center transition-colors">Log In</button>
+<button class="text-slate-600 font-semibold text-sm hover:text-blue-600 dark:text-slate-300 dark:hover:text-white h-[36px] px-3 flex items-center transition-colors">Sign in</button>
 <button class="bg-blue-600 text-white px-5 h-[36px] rounded-full font-bold text-sm hover:bg-blue-700 transition-colors flex items-center justify-center shadow-lg shadow-blue-500/30 dark:shadow-blue-900/50">Sign Up</button>
 </div>
 <div class="md:hidden flex items-center gap-4">
